Fix <a> tags are wrong size on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ a {
     color: #e6e6e6;
     font-style: italic;
     text-decoration: none;
+    font-size: 1rem;
 }
 
 a:hover {
